style: stop cropping quest objectives icons & tweak their texts' appearance change when hovered

--- a/src/styles/Quest.css
+++ b/src/styles/Quest.css
@@ -17,8 +17,8 @@
 .quest-checkbox {
   appearance: none;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 20px;
   width: 20px;
   height: 20px;
   border: 1px solid black;
