--- a/src/styles/QuestObjective.css
+++ b/src/styles/QuestObjective.css
@@ -3,14 +3,13 @@
 }
 
 .quest-objective-label:hover {
-  text-shadow: 0 0 2px rgb(0 0 0 / 65%);
+  text-shadow: 0 0 4px rgb(0 0 0 / 75%);
 }
 
 .quest-objective-checkbox {
   appearance: none;
   width: 30px;
   height: 30px;
-  border-radius: 16px;
   background-image: url("/quest-objective-uncompleted.png");
   background-position: center;
   background-repeat: no-repeat;
